--- a/_sass/_breadth.scss
+++ b/_sass/_breadth.scss
@@ -106,7 +106,7 @@
     }    
 }
 .video.breadth {
-    @include breakpoint (medium-only-portrait-up) {
+    @media only screen and (min-width: px-to-em(801)) {
         float: right;
         margin-left: $gutter();
     }
