--- a/_sass/_wells.scss
+++ b/_sass/_wells.scss
@@ -3,7 +3,7 @@
  */
 .well,
 .block {
-    background: $web-sky-blue;
+    background: #E3F3FF;
     padding: 1em;
     margin-bottom: 2em;
     @include clearfix;
