--- a/_sass/_content-promo.scss
+++ b/_sass/_content-promo.scss
@@ -14,7 +14,7 @@
 .promo h2 {
     margin-bottom: 0;
 }
-@media only screen and (min-width: 40.0625em) {
+@media only screen and (min-width: px-to-em(641)) {
     .promo figure {
         margin-bottom: 0;
     }
