--- a/_sass/_slider-controls.scss
+++ b/_sass/_slider-controls.scss
@@ -11,7 +11,7 @@
     button {
         border: none;
         background: none;
-        color: $mgse-blue;
+        color: #00447C;
         &.prev {
             float: left;
             &:before {
@@ -49,10 +49,10 @@
             width: 10px;
             height: 10px;
             border-radius: 50%;
-            background: $web-sky-blue;
+            background: #E3F3FF;
             margin: 0 3px;
             &.current {
-                background: $mgse-blue;
+                background: #00447C;
             }
         }
     }
