--- a/_sass/_tabs.scss
+++ b/_sass/_tabs.scss
@@ -2,7 +2,7 @@
  * Tabs
  */
 ul.tabs {
-    border-bottom: 2px solid $web-10-blue;
+    border-bottom: 2px solid #0072C9;
     @include clearfix;
     margin-bottom: 0;
     margin-top: 3em;
@@ -14,21 +14,21 @@ ul.tabs {
         margin: 0;
         a {
             display: block;
-            color: $web-blue;
+            color: #005596;
             font-size: 90%;
             padding: 0.618em 2em;
             border-bottom: none;
             border-right: 1px solid #fff;
             border-top: 2px solid #fff;
-            background: $web-sky-blue;
+            background: #E3F3FF;
             &:hover {
-                background: $web-20-blue;
+                background: #008ffc;
             }
             &.current {
                 color: #fff;
-                background: $web-10-blue;
-                border-right: 1px solid $web-blue;
-                border-top: 2px solid $web-10-blue;
+                background: #0072C9;
+                border-right: 1px solid #005596;
+                border-top: 2px solid #0072C9;
                 margin-right: 1px;
             }
         }
@@ -38,9 +38,9 @@ ul.tabs {
             a {
                &.current {
                     background: #fff;
-                    color: $web-blue;
-                   border-left: 2px solid $web-blue;
-                   border-right: 2px solid $web-blue;
+                    color: #005596;
+                   border-left: 2px solid #005596;
+                   border-right: 2px solid #005596;
                    border-bottom: 2px solid #fff;
                    margin-bottom: -2px;
                 }
