--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -2,24 +2,24 @@
 
 body {
     font-family: $body-font-family;
-    color: $text-color;
+    color: #444444;
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: $body-font-bold;
     margin-top: 0;
 }
 h1, h2, h3, h5 {
-    color: $web-blue;
+    color: #005596;
 }
 h4, h6 {
-    color: $web-grey;
+    color: #4A4A4A;
 }
 h1 {
     font-size: 2em;
     font-weight: 700;
     line-height: 1.263;
     margin-bottom: 0.5em;
-    @include breakpoint (medium-up) {
+    @media only screen and (min-width: px-to-em(641)) {
         font-size: 2.6em;
     }
 }
@@ -40,7 +40,7 @@ h2 {
     font-weight: 700;
     line-height: 1.618;
     margin-bottom: 1.25em;
-    @include breakpoint (medium-up) {
+    @media only screen and (min-width: px-to-em(641)) {
         font-size: 1.44em;
         margin-bottom: 1.04167em;
     }
@@ -55,7 +55,7 @@ h2 {
 }
 .side-bar h2 {
     font-size: 0.9 * 1.24em;
-    @include breakpoint (medium-up) {
+    @media only screen and (min-width: px-to-em(641)) {
         font-size: 1.24em;
     }
 }
@@ -64,13 +64,13 @@ h3 {
     font-weight: 700;
     line-height: 1.618;
     margin-bottom: 0.236em;
-    @include breakpoint (medium-up) {
+    @media only screen and (min-width: px-to-em(641)) {
         font-size: 1.24em;
     }
 }
 .side-bar h3 {
     font-size: 0.9 * 1.2em;
-    @include breakpoint (medium-up) {
+    @media only screen and (min-width: px-to-em(641)) {
         font-size: 1.2em;
     }
 }
@@ -79,13 +79,13 @@ h4 {
     font-weight: 700;
     line-height: 1.618;
     margin-bottom: 0.236em;
-    @include breakpoint (medium-up) {
+    @media only screen and (min-width: px-to-em(641)) {
         font-size: 1.2em;
     }
 }
 .side-bar h4 {
     font-size: 0.9 * 1em;
-    @include breakpoint (medium-up) {
+    @media only screen and (min-width: px-to-em(641)) {
         font-size: 1em;
     }
 }
@@ -94,13 +94,13 @@ h5 {
     font-weight: 700;
     line-height: 1.5;
     margin-bottom: 1.5em;
-    @include breakpoint (medium-up) {
+    @media only screen and (min-width: px-to-em(641)) {
         font-size: 1em;
     }
 }
 .side-bar h5 {
     font-size: 0.9 * 1em;
-    @include breakpoint (medium-up) {
+    @media only screen and (min-width: px-to-em(641)) {
         font-size: 1em;
     }
 }
@@ -109,7 +109,7 @@ h6 {
     font-weight: 400;
     line-height: 1.5;
     margin-bottom: 1.5em;
-    @include breakpoint (medium-up) {
+    @media only screen and (min-width: px-to-em(641)) {
         font-size: 1em;
     }
 }
@@ -120,13 +120,13 @@ p {
     margin: 0 0 1.5em 0;
     word-wrap: break-word;
     max-width: 745px;
-    @include breakpoint (medium-up) {
+    @media only screen and (min-width: px-to-em(641)) {
         font-size: 1em;
     }
     &.intro {
         font-size: 1.1em;
         line-height: 1.5;
-        @include breakpoint (medium-up) {
+        @media only screen and (min-width: px-to-em(641)) {
             font-size: 1.2em;
         }
     }
@@ -136,7 +136,7 @@ p {
         font-size: 1em;
         margin-top: -1em;
         margin-bottom: 2em;
-        color: $web-blue;
+        color: #005596;
     }
 }
 /* inline tag styles */
@@ -145,8 +145,8 @@ p {
 a,
 a:active,
 a:visited {
-    border-bottom: 1px solid $web-10-blue;
-    color: $web-blue;
+    border-bottom: 1px solid #0072C9;
+    color: #005596;
     transition-property: color;
     transition-timing: ease-out;
     transition-duration: 1s;
@@ -154,7 +154,7 @@ a:visited {
 }    
 a:hover {
     border-bottom: none;
-    color: $web-10-blue;
+    color: #0072C9;
 }
 .pointer,
 a.pointer {
@@ -240,8 +240,7 @@ ol.outline {
  * Blockquote
  */
 blockquote {
-    color: $web-blue;
-    //font-family: $font-sans;
+    color: #005596;
     font-weight: 400;
     position: relative;
     font-size: 1em; 
@@ -250,14 +249,14 @@ blockquote {
         margin: 0px;
 
         &:before {
-            color: $web-50-blue;
+            color: #96d2ff;
             content: "\f10d";
             font-family: FontAwesome;
             margin-left: -2em;
             padding-right: 1em;
         }
         &:after {
-            color: $web-50-blue;
+            color: #96d2ff;
             content: "\f10e";
             float: right;
             font-family: FontAwesome;
