--- a/_sass/_alert.scss
+++ b/_sass/_alert.scss
@@ -8,8 +8,9 @@
   border: 1px solid #009DDC;
   border-radius: 3px;
   padding: 20px;
-  box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5; }
-
+  box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
+}
 .side-bar .alert,
 .side-bar.alert {
-  margin: 0 auto 2em auto; }
+  margin: 0 auto 2em auto; 
+}
